--- a/prepros.config
+++ b/prepros.config
@@ -506,7 +506,7 @@
               "replaceWith": "css"
             }
           ],
-          "relativePath": "../../dist/css"
+          "relativePath": "../../theme/dist/css"
         }
       },
       "less": {
@@ -635,7 +635,7 @@
         "output": {
           "extension": ".js",
           "type": "SOURCE_RELATIVE",
-          "relativePath": "../../dist/js",
+          "relativePath": "../../theme/dist/js",
           "suffix": "-dist",
           "alwaysSuffix": false
         }
